[tool.poetry]
name = "basic-rest-api"
version = "0.1.0"
description = ""
authors = ["Agustin Rojas <rojasagustin90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
fastapi = "^0.68.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
